--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+@media (max-width: 640px) {
+  .custom-swal-popup {
+    width: 98% !important;
+    padding: 1.5rem !important;
+  }
+
+  .swal2-input {
+    font-size: 14px;
+    width: 100%;
+    margin: 10px auto;
+  }
+}
